welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:27: error: Unmatched closing brace '}' ignored here
	}
        ^BDRBuggle:28: error: eof expected but '}' found.
}
^