welcome.lessons.welcome.bdr.BDR.scala.code
if ( estSurMessage() == true ) {
	litMessage();
		
		if ("R") {
			droite();avance();
		} else if ("L") { 
			gauche();avance();
		} else if ("I") { 
			droite();droite();avance();
		} else if ("A") { 
			avance();}
		} else if ("B") {
			avance();avance();
		} else if ("C") { 
			avance();avance();avance();
		} else if ("Z") { 
			recule();
		} else if ("X") { 
			recule();recule();
		} else if ("Y") {
			recule();recule();recule();
		}
}	
}	